// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Page Basic Page 1`] = `
<main
  class="fd-page"
>
  
    
  <header>
    
        
    <div
      class="fd-bar fd-bar--page fd-bar--header"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="Go back"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--navigation-left-arrow"
            />
            
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                     Header Title
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="See more"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--grid"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </header>
  
    
  <div
    class="fd-page__content"
    role="region"
  >
    
        
    <div
      style="height: 400px"
    >
      
            Page Content
        
    </div>
    
    
  </div>
  
    
  <footer>
    
        
    <div
      class="fd-bar fd-bar--page fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </footer>
  

</main>
`;

exports[`Storyshots Layouts/Page Responsive Page 1`] = `
<main
  class="fd-page fd-page--home fd-page--list"
>
  
    
  <header>
    
        
    <div
      class="fd-bar fd-bar--home-page-xl fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="Go back"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--navigation-left-arrow"
            />
            
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                     Header Title
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="See more"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--overflow"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </header>
  
    
  <div
    class="fd-page__content--xl"
    role="region"
  >
    
        
    <div
      style="height: 400px"
    >
      
            Page Content
        
    </div>
    
    
  </div>
  
    
  <footer>
    
        
    <div
      class="fd-bar fd-bar--home-page-xl fd-bar--floating-footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </footer>
  

</main>
`;

exports[`Storyshots Layouts/Page Transparent Page 1`] = `
<main
  class="fd-page fd-page--transparent"
>
  
    
  <header>
    
        
    <div
      class="fd-bar fd-bar--page-m_l fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="Go back"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--navigation-left-arrow"
            />
            
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                     Header Title
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="See more"
            class="fd-button fd-button--transparent"
          >
             
                        
            <i
              class="sap-icon--overflow"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </header>
  
    
  <div
    class="fd-bar fd-bar--page-m_l fd-bar--subheader"
  >
    
        
    <div
      class="fd-bar__middle"
    >
      
            
      <div
        class="fd-bar__element fd-bar__element--full-width"
      >
        
                
        <div
          class="fd-form-item fd-form-item--horizontal"
        >
          
                    
          <label
            class="fd-form-label"
            for="input-1"
          >
            
                        Field Text:
                    
          </label>
          
                    
          <input
            class="fd-input fd-input--compact"
            id="input-1"
            placeholder="Field placeholder text"
            type="text"
          />
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-page__content--m_l"
    role="region"
  >
    
        
    <div
      style="height: 400px"
    >
      
            Page Content
        
    </div>
    
    
  </div>
  
    
  <footer>
    
        
    <div
      class="fd-bar fd-bar--page-m_l fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </footer>
  

</main>
`;
